# ezio

./: .gitmodules  CMakeLists.txt  README.md  ezio.sln  ezio.vcxproj  ezio.vcxproj.filters  gen.py
.anvil/: project_rules.toml
examples/: CMakeLists.txt
examples/chat/: CMakeLists.txt  chat-client.vcxproj  chat-client.vcxproj.filters  chat-server.vcxproj  chat-server.vcxproj.filters  chat_client.cpp  chat_client.h  chat_client_main.cpp  chat_server.cpp  chat_server.h  chat_server_main.cpp  data_codec.cpp  data_codec.h
examples/echo/: CMakeLists.txt  echo-client.vcxproj  echo-client.vcxproj.filters  echo-server.vcxproj  echo-server.vcxproj.filters  echo_client.cpp  echo_server.cpp
examples/socks4a/: CMakeLists.txt  main.cpp  socks_proxy.cpp  socks_proxy.h  tunnel.cpp  tunnel.h
ezio/: CMakeLists.txt  acceptor_posix.cpp  buffer.cpp  buffer.h  buffer_posix.cpp  chrono_utils.h  common_event_handlers.h  connector.h  connector_base.cpp  connector_base.h  connector_posix.cpp  connector_win.cpp  endian_utils.h  event_loop.cpp  event_loop.h  event_pump.cpp  event_pump.h  event_pump_impl_posix.cpp  event_pump_impl_win.cpp  event_pump_impl_win.h  ignore_sigpipe.cpp  io_context.h  io_service_context.cpp  io_service_context.h  notifier.cpp  notifier.h  notifier_posix.cpp  notifier_win.cpp  scoped_socket.h  socket_address.cpp  socket_address.h  socket_utils.cpp  socket_utils.h  socket_utils_posix.cpp  socket_utils_win.cpp  tcp_client.cpp  tcp_client.h  tcp_connection.cpp  tcp_connection.h  tcp_connection_posix.cpp  (+13 more)
tests/: CMakeLists.txt  acceptor_unittest.cpp  buffer_unittest.cpp  connector_and_tcpclient.cpp  endian_utils_unittest.cpp  ignore_sigpipe_unittest.cpp  io_service_context_unittest.cpp  loop_and_notifier_unittest.cpp  main.cpp  scoped_socket_unittest.cpp  socket_address_unittest.cpp  tcp_server_and_connection.cpp  test.vcxproj  test.vcxproj.filters  thread_and_worker_pool.cpp  winsock_context_unittest.cpp
